--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,8 +14,8 @@ source:
   sha256: 02c39c32af437114f978f476cb21afdeb788784eeb8d4df69339f2d1e06c9249
 
 build:
-  noarch: generic
   merge_build_host: true  # [win]
+  noarch: generic
   number: 0
   rpaths:
     - lib/R/lib/
@@ -40,18 +40,13 @@ test:
 
 about:
   home: https://github.com/andrie/ggdendro
-  license: GPL-2 | GPL-3
+  license: GPL-2.0-or-later
   summary: This is a set of tools for dendrograms and tree plots using 'ggplot2'.  The 'ggplot2' philosophy is to clearly separate data from the presentation. Unfortunately the plot method for dendrograms plots directly to a plot device without exposing the data. The 'ggdendro' package resolves this by making available functions
     that extract the dendrogram plot data. The package provides implementations for tree, rpart, as well as diana and agnes cluster diagrams.
   license_family: GPL3
-  license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
